--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,5 +1,8 @@
 .login{
     height: 100vh;
-    background-image: url(src/assets/assets/background_banner.jpg);
-    
+    background-image: linear-gradient(#0000007e,#0000007e), url(src/assets/assets/background_banner.jpg);
+    padding: 20px;
+}
+.login-logo{
+    width: 150px;
 }
